My second website commit. The begining of greatness

--- a/about.html
+++ b/about.html
@@ -264,7 +264,11 @@ $(document).ready(function () {
 </div>
 
 
-<p>Why I am awesome.</p>
+<ul>
+<li><strong>Name:</strong> Skyler Sung</li>
+<li><strong>Ocupation:</strong> “Undergraduate Neuroscience student and microbiology research assistant at Amherst College”</li>
+<li><strong>Hobbies:</strong> Photography</li>
+</ul>
 
 
 
