My second website commit. The begining of greatness

--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@
 
 
 
-<title>About Me</title>
+<title>Skyler Sung</title>
 
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -57,6 +57,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -259,16 +260,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Skyler Sung</h1>
 
 </div>
 
 
+<p>Pronouns: he/him/his</p>
 <ul>
 <li><strong>Name:</strong> Skyler Sung</li>
 <li><strong>Ocupation:</strong> “Undergraduate Neuroscience student and microbiology research assistant at Amherst College”</li>
-<li><strong>Hobbies:</strong> Photography</li>
+<li><strong>Hobbies:</strong> Photography, Hiking,</li>
 </ul>
+<p><img src="Scholastics_2020.jpeg" /></p>
 
 
 
