--- a/about.html
+++ b/about.html
@@ -246,6 +246,9 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
+  <a href="projects.html">Projects</a>
+</li>
+<li>
   <a href="about.html">About Me</a>
 </li>
       </ul>
@@ -268,8 +271,9 @@ $(document).ready(function () {
 <p>Pronouns: he/him/his</p>
 <ul>
 <li><strong>Name:</strong> Skyler Sung</li>
-<li><strong>Ocupation:</strong> “Undergraduate Neuroscience student and microbiology research assistant at Amherst College”</li>
-<li><strong>Hobbies:</strong> Photography, Hiking,</li>
+<li><strong>Occupation:</strong> Undergraduate Neuroscience student and microbiology research assistant at Amherst College</li>
+<li><strong>Research Interests:</strong> Microbiomes, fungal genomics, symbiosis, neuromodulation</li>
+<li><strong>Hobbies:</strong> Photography, Hiking, Travel</li>
 </ul>
 <p><img src="Scholastics_2020.jpeg" /></p>
 
