--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Skyler’s Website</title>
+<title>Projects</title>
 
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -263,12 +263,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Skyler’s Website</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p>Hello, World!</p>
+
 
 
 
