My second website commit. The begining of greatness

--- a/about.html
+++ b/about.html
@@ -268,9 +268,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>Pronouns: he/him/his</p>
+<p><strong>Pronouns: he/him/his</strong></p>
 <ul>
-<li><strong>Name:</strong> Skyler Sung</li>
 <li><strong>Occupation:</strong> Undergraduate Neuroscience student and microbiology research assistant at Amherst College</li>
 <li><strong>Research Interests:</strong> Microbiomes, fungal genomics, symbiosis, neuromodulation</li>
 <li><strong>Hobbies:</strong> Photography, Hiking, Travel</li>
