My second website commit. The begining of greatness

--- a/about.html
+++ b/about.html
@@ -273,6 +273,10 @@ $(document).ready(function () {
 <li><strong>Occupation:</strong> Undergraduate Neuroscience student and microbiology research assistant at Amherst College</li>
 <li><strong>Research Interests:</strong> Microbiomes, fungal genomics, symbiosis, neuromodulation</li>
 <li><strong>Hobbies:</strong> Photography, Hiking, Travel</li>
+<li><strong>Links:</strong>
+<ul>
+<li><a href="www.skylersung.com">Photography Website</a></li>
+</ul></li>
 </ul>
 <p><img src="Scholastics_2020.jpeg" /></p>
 
