My second website commit. The begining of greatness

--- a/about.html
+++ b/about.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
 <li><strong>Hobbies:</strong> Photography, Hiking, Travel</li>
 <li><strong>Links:</strong>
 <ul>
-<li><a href="www.skylersung.com">Photography Website</a></li>
+<li><a href="https://www.skylersung.com/">Photography Website</a></li>
 </ul></li>
 </ul>
 <p><img src="Scholastics_2020.jpeg" /></p>
