My second website commit. The begining of greatness

--- a/about.html
+++ b/about.html
@@ -270,9 +270,14 @@ $(document).ready(function () {
 
 <p><strong>Pronouns: he/him/his</strong></p>
 <ul>
-<li><strong>Occupation:</strong> Undergraduate Neuroscience student and microbiology research assistant at Amherst College</li>
+<li><strong>Occupation:</strong> Undergraduate Neuroscience student and research assistant in the <a href="http://www.apurdylab.org/">Purdy Microbiology Lab</a>! at Amherst College</li>
 <li><strong>Research Interests:</strong> Microbiomes, fungal genomics, symbiosis, neuromodulation</li>
-<li><strong>Hobbies:</strong> Photography, Hiking, Travel</li>
+<li>__Past Labs:
+<ul>
+<li><a href="https://www.glowingsquid.org/index.php">Margaret McFall-Ngai &amp; Ned Ruby, University of Hawaii</a>!</li>
+<li><a href="https://www.genome.gov/staff/Julie-Segre-PhD">Julie Segre, National Human Genome Research Institution</a>!</li>
+</ul></li>
+<li><strong>Hobbies:</strong> Photography, Hiking, Traveling</li>
 <li><strong>Links:</strong>
 <ul>
 <li><a href="https://www.skylersung.com/">Photography Website</a>!</li>
