--- a/about.html
+++ b/about.html
@@ -272,7 +272,7 @@ $(document).ready(function () {
 <ul>
 <li><strong>Occupation:</strong> Undergraduate Neuroscience student and research assistant in the <a href="http://www.apurdylab.org/">Purdy Microbiology Lab</a>! at Amherst College</li>
 <li><strong>Research Interests:</strong> Microbiomes, fungal genomics, symbiosis, neuromodulation</li>
-<li>__Past Labs:
+<li><strong>Past Labs:</strong>
 <ul>
 <li><a href="https://www.glowingsquid.org/index.php">Margaret McFall-Ngai &amp; Ned Ruby, University of Hawaii</a>!</li>
 <li><a href="https://www.genome.gov/staff/Julie-Segre-PhD">Julie Segre, National Human Genome Research Institution</a>!</li>
@@ -280,7 +280,7 @@ $(document).ready(function () {
 <li><strong>Hobbies:</strong> Photography, Hiking, Traveling</li>
 <li><strong>Links:</strong>
 <ul>
-<li><a href="https://www.skylersung.com/">Photography Website</a>!</li>
+<li><a href="https://www.skylersung.com/">Photography Website</a></li>
 </ul></li>
 </ul>
 <p><img src="Scholastics_2020.jpeg" /></p>
