--- a/about.html
+++ b/about.html
@@ -270,12 +270,12 @@ $(document).ready(function () {
 
 <p><strong>Pronouns: he/him/his</strong></p>
 <ul>
-<li><strong>Occupation:</strong> Undergraduate Neuroscience student and research assistant in the <a href="http://www.apurdylab.org/">Purdy Microbiology Lab</a>! at Amherst College</li>
+<li><strong>Occupation:</strong> Undergraduate Neuroscience student and research assistant in the <a href="http://www.apurdylab.org/">Purdy Microbiology Lab</a> at Amherst College</li>
 <li><strong>Research Interests:</strong> Microbiomes, fungal genomics, symbiosis, neuromodulation</li>
 <li><strong>Past Labs:</strong>
 <ul>
-<li><a href="https://www.glowingsquid.org/index.php">Margaret McFall-Ngai &amp; Ned Ruby, University of Hawaii</a>!</li>
-<li><a href="https://www.genome.gov/staff/Julie-Segre-PhD">Julie Segre, National Human Genome Research Institution</a>!</li>
+<li><a href="https://www.glowingsquid.org/index.php">Margaret McFall-Ngai &amp; Ned Ruby, University of Hawaii</a></li>
+<li><a href="https://www.genome.gov/staff/Julie-Segre-PhD">Julie Segre, National Human Genome Research Institution</a></li>
 </ul></li>
 <li><strong>Hobbies:</strong> Photography, Hiking, Traveling</li>
 <li><strong>Links:</strong>
