My second website commit. The begining of greatness

--- a/projects.html
+++ b/projects.html
@@ -268,7 +268,10 @@ $(document).ready(function () {
 </div>
 
 
-
+<p><strong>Projects</strong></p>
+<ul>
+<li><strong>Fungal Annotation Pipeline:</strong> <a href="https://github.com/couldbewoese/funannotate_script">Git</a></li>
+</ul>
 
 
 
